TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4


2012-04-01 MickeM
 * Fixed issue with default port for NSCA/NRPE/* clients

2012-03-31 MickeM
 * Rewritten log implementation from ground up without using crappy boost library which requires DNS :(

2012-03-27 MickeM
 * Removed some annoying "error" messages
 * Tweaked FGileLogger a bit to be more "modern"
 * Changed so file-name expansion is more efficient
 * Changed so modules are defaulted to 0 in config.
 * Log levels are case sensetive
 * Fixed so log level is not read from ini file
 * improved plugin processing from ini files

2012-03-26 MickeM
 * Fixed perfoamcen data parsing issue
 * Fixed external scripts perfoamcen data issue
 * Fixed boolen flag handling in settings (default generated as false regardless of actual state)
 * Fixed so "advanced properties" are not generated with --update-defalts
 * Added some "advanced properties" here and there
 * Fixed path handling for object

2012-03-25 MickeM
 * Added last few features to the GraphitePlugin (which is now usable)
 * Tweaked nscp settings command line syntax a bit to be more flexible and usable...

2012-03-20 MickeM
 * Fixed alias/service name for real-time event log filters
 * Added smtp/syslog and graphite clients to installer
 * Fixed so eventlog wont crahs on invalid messages

2012-03-19 MickeM
 * Fixed issue in installer and "Make file writable" by everyone now uses Users SID.
 * Fixed issue in installer and "Default plugins" now correctly sets them to 1.
 
2012-03-18 MickeM
 * Removed dependency on tcpip from the service and the installer
 * Added new command to EventLog CheckEventlogCached which checks result caught by the real-time process.
   CheckEventLogCACHE warn=gt:1 crit=gt:5
   Requires a configured real-time checker to work.
 * Added a series of keywords to EventLog check to facilitate better checking