@@ -22,6 +22,9 @@ SET(SRCS
 )
 
 ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
+IF(OPENSSL_FOUND)
+	ADD_DEFINITIONS(-DUSE_SSL)
+ENDIF(OPENSSL_FOUND)
 
 IF(WIN32)
 	SET(SRCS ${SRCS}
