@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,153
-#define STRPRODUCTVER  "0,4,0,153"
-#define STRPRODUCTDATE "2012-04-02"
+#define PRODUCTVER     0,4,0,156
+#define STRPRODUCTVER  "0,4,0,156"
+#define STRPRODUCTDATE "2012-04-05"
 #endif // VERSION_HPP
